<resources>
    <string name="app_name">Easy Split</string>
    <string name="login_text">Registrate</string>
    <string name="login_text_name">Nombre de usuario</string>
    <string name="login_text_email">Email</string>
    <string name="login_text_hint_name">Introduzca su nombre…</string>
    <string name="login_text_hint_email">Introduzca su email…</string>
    <string name="login_text_phone">Telefono</string>
    <string name="login_text_hint_phone">Introduzca su telefono…</string>
    <string name="login_send_button">Entrar</string>
    <string name="baseUrl">http://erisbarrancop.eu.pythonanywhere.com/</string>
    <string name="plans_head_text">Planes</string>
    <string name="login_text_SignIn">Si ya tienes una cuenta, </string>
    <string name="login_text_SignInClick">Inicia Sesión</string>
    <string name="form_username">Iniciar Sesion\n</string>
    <string name="login_form_username">Nombre de usuario…</string>
    <string name="login_button_text">Iniciar Sesion\n</string>
    <string name="submit">Añadir Plan\n</string>
</resources>