<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Vistas.MainActivity">

    <LinearLayout
        android:layout_margin="15dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/easysplit_layoutborder">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:textStyle="bold"
            android:text="@string/login_text"
            android:textSize="16dp"
            android:background="@drawable/easysplit_gradientbackgroundbordered"
            android:gravity="center"
            />
        <LinearLayout
            android:layout_margin="15dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/login_text_name"
                android:textSize="16dp"
                android:layout_gravity="center"
                android:padding="10dp"/>

            <EditText
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:id="@+id/name_login"
                android:hint="@string/login_text_hint_name"
                android:textColorHint="#ADA1CD4F"
                android:layout_gravity="center"
                android:inputType="text"
                android:gravity="center"
                android:background="@drawable/easysplit_edittext"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/login_text_email"
                android:textSize="16dp"
                android:layout_gravity="center"
                android:padding="10dp"/>
            <EditText
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:id="@+id/email_login"
                android:hint="@string/login_text_hint_email"
                android:textColorHint="#ADA1CD4F"
                android:layout_gravity="center"
                android:inputType="text"
                android:gravity="center"
                android:background="@drawable/easysplit_edittext"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/login_text_phone"
                android:textSize="16dp"
                android:layout_gravity="center"
                android:padding="10dp"/>
            <EditText
                android:layout_width="225dp"
                android:layout_height="40dp"
                android:id="@+id/phone_login"
                android:hint="@string/login_text_hint_phone"
                android:textColorHint="#ADA1CD4F"
                android:layout_gravity="center"
                android:inputType="number"
                android:gravity="center"
                android:background="@drawable/easysplit_edittext"/>

            <Button
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/login_send_button"
                android:textStyle="bold"
                android:id="@+id/login_button"
                android:layout_margin="20dp"
                android:layout_gravity="center"
                android:background="@drawable/easysplit_button"
                >
            </Button>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>